Async version of /snapshot
